# etymological

./: .gitignore  CODEBASE_REVIEW_IMPROVEMENTS.md  Dockerfile  GITHUB_ACTIONS_SETUP.md  LIGHTWEIGHT_TRANSFORMATION.md  QUICKSTART.md  README.md  SECURITY.md  TWITTER_API_APPLICATION.md  config_template.env  docker-compose.yml  env.example  etymology_demo.py  generative_etymobot_concept.py  main.py  production_etymobot.py  pyproject.toml  requirements-test.txt  requirements.txt  web_verified_etymobot.py
.github/workflows/: etymobot.yml  post-tweets.yml  roots-refresh.yml  test.yml
data/: posted.csv  regression_oracle.txt
docs/: CURRENT_ARCHITECTURE.md  PAIRING_ENGINE_FIXES.md
docs/api/: modules.md
scripts/: audit_roots.py  build_roots.py  create_regression_oracle.py  post.py  test_pairing.py  utils_roots.py
src/etymobot/: __init__.py  bot.py  cli.py  config.py  database.py  etymology.py  models.py  services.py
tests/: __init__.py  test_bot.py  test_stylistic_variation.py
