[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etymobot"
version = "1.0.0"
description = "Automated etymology discovery and Twitter posting bot"
authors = [
    {name = "EtymoBot Project", email = "contact@etymobot.dev"}
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["etymology", "twitter", "bot", "linguistics", "nlp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.0",
    "tweepy>=4.15.0",
    "openai>=1.80.0",
    "wordfreq>=3.1.0",
    "beautifulsoup4>=4.13.0",
    "pytz>=2025.2",
    "numpy>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.16.0",
    "autopep8>=2.3.0",
    "types-pytz>=2025.2.0",
    "types-requests>=2.32.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/username/etymobot"
Repository = "https://github.com/username/etymobot"
Documentation = "https://github.com/username/etymobot/blob/main/README.md"
Issues = "https://github.com/username/etymobot/issues"

[project.scripts]
etymobot = "etymobot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "wordfreq.*",
    "tweepy.*",
    "bs4.*",
]
ignore_missing_imports = true 